# cs-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  vetur.config.js
api/: .dockerignore  .gitignore  Dockerfile
api/src/resources/: admin.py
api/src/resources/migrations/: 0001_initial.py
api/src/resources/tests/: test_serializers.py
api/src/users/: views.py
api/src/users/tests/: test_serializers.py
app/: .dockerignore  .env.development  Dockerfile  package-lock.json  package.json  vue.config.js
app/public/: index.html
app/src/: App.vue  main.js
app/src/assets/scss/: _helpers.scss  global.scss
app/src/components/: Navbar.vue
app/src/router/: index.js
app/src/services/: authentication.js  index.js
app/src/store/: index.js  user.js
app/src/views/: Login.vue  SignUp.vue
server/: Dockerfile  conftest.py
server/config/: settings.py  urls.py
server/resources/: admin.py  models.py  serializers.py  views.py
server/resources/migrations/: 0002_quota.py
server/resources/tests/: conftest.py  test_models.py  test_views.py
server/server/: settings.py
server/src/config/: settings.py
server/src/resources/: urls.py
server/src/resources/tests/: test_models.py
server/src/users/: serializers.py  urls.py
server/src/users/migrations/: 0001_initial.py
server/src/users/tests/: test_csrf_authentication.py  test_services.py
server/users/: admin.py  authentication.py  models.py  serializers.py  services.py  urls.py  views.py
server/users/tests/: conftest.py  test_admin.py  test_authentication.py  test_csrf_authentication.py  test_csrf_cookie_view.py  test_jwt_cookie_authentication.py  test_models.py  test_serializers.py  test_services.py  test_views.py
