[tool.poetry]
name = "cs-platform"
version = "0.1.0"
description = ""
authors = ["Zach Pang <zachery.pang@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9.6"
Django = "^3.2.6"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
