[tool.poetry]
name = "cs-platform"
version = "0.1.0"
description = ""
authors = ["Zach Pang <zachery.pang@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9.6"
Django = "^3.2.6"
psycopg2 = "^2.9.1"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"

[tool.isort]
# make it compatible with black
profile = "black" 
sections = ['FUTURE', 'STDLIB', 'DJANGO', 'THIRDPARTY','FIRSTPARTY', 'LOCALFOLDER']
known_django = ['django', 'rest_framework']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
